# openglgame-C

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cglm.cbp  cmake_install.cmake  compile_commands.json  main.cpp  openglgame  openglgame.cbp
NVIDIA Nsight Graphics/LearnOpenGL/: LearnOpenGL.nsight-gfxproj
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/glfw/: GLFW.cbp
include/: ALMasterController.h  shader_m.h  shaderread.h
shaders/: fraglamp.glsl  fraglighted.glsl  fraglightedtextured.glsl  fraglightedtexturedspot.glsl  fragtextured.glsl  vertex3dlighting.glsl  vertex3dlightingtextured.glsl  vertex3dtextured.glsl
src/: ALMasterController.cpp  main.c  main.cpp  shaderread.c  shaderread.cpp
